--- a/content/courses/economics/01-ce.html
+++ b/content/courses/economics/01-ce.html
@@ -33,10 +33,24 @@ On the page you are reviewing, the icons and the contents they refer are as foll
 </div>
 <div id="syllabus-and-important-dates" class="section level2">
 <h2>Syllabus and Important Dates</h2>
-<ul>
-<li><a href="../../../repo/akek/courses/economics/CE/Economics%20-%20Syllabus%20(Kara).pdf">Syllabus</a> 🇺🇸 🔄</li>
-<li><a href="../../../repo/akek/courses/economics/CE/Economics%20-%20Important%20Dates%20(Kara).pdf">Important Dates</a> 🇺🇸 🔄</li>
-</ul>
+<table>
+<thead>
+<tr class="header">
+<th align="left">Normal Education</th>
+<th align="left">Summer School</th>
+</tr>
+</thead>
+<tbody>
+<tr class="odd">
+<td align="left"><a href="../../../repo/akek/courses/economics/CE/Economics_NE%20-%20Syllabus%20(Kara).pdf">Syllabus</a> 🇺🇸🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/economics/CE/Economics%20-%20Syllabus%20(Kara).pdf">Syllabus</a> 🇺🇸🔄</td>
+</tr>
+<tr class="even">
+<td align="left"><a href="../../../repo/akek/courses/economics/CE/Economics_NE%20-%20Important%20Dates%20(Kara).pdf">Important Dates</a> 🇺🇸🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/economics/CE/Economics_NE%20-%20Important%20Dates%20(Kara).pdf">Important Dates</a> 🇺🇸🔄</td>
+</tr>
+</tbody>
+</table>
 </div>
 <div id="course-book" class="section level2">
 <h2>Course Book</h2>
