--- a/content/courses/economics/02-ee.html
+++ b/content/courses/economics/02-ee.html
@@ -38,16 +38,19 @@ On the page you are reviewing, the icons and the contents they refer are as foll
 <tr class="header">
 <th align="left">Normal Education</th>
 <th align="left">Secondary Education</th>
+<th align="left">Summer School</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
-<td align="left"><a href="../../../repo/akek/courses/economics/EE/Economics_NE%20-%20Syllabus%20(Kara).pdf">Syllabus</a> 🇺🇸 🔄</td>
-<td align="left"><a href="../../../repo/akek/courses/economics/EE/Economics_SE%20-%20Syllabus%20(Kara).pdf">Syllabus</a> 🇺🇸 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/economics/EE/Economics_NE%20-%20Syllabus%20(Kara).pdf">Syllabus</a> 🇺🇸🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/economics/EE/Economics_SE%20-%20Syllabus%20(Kara).pdf">Syllabus</a> 🇺🇸🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/economics/EE/Economics%20-%20Syllabus%20(Kara).pdf">Syllabus</a> 🇺🇸🔄</td>
 </tr>
 <tr class="even">
-<td align="left"><a href="../../../repo/akek/courses/economics/EE/Economics_NE%20-%20Important%20Dates%20(Kara).pdf">Important Dates</a> 🇺🇸 🔄</td>
-<td align="left"><a href="../../../repo/akek/courses/economics/EE/Economics_SE%20-%20Important%20Dates%20(Kara).pdf">Important Dates</a> 🇺🇸 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/economics/EE/Economics_NE%20-%20Important%20Dates%20(Kara).pdf">Important Dates</a> 🇺🇸🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/economics/EE/Economics_SE%20-%20Important%20Dates%20(Kara).pdf">Important Dates</a> 🇺🇸🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/economics/EE/Economics%20-%20Important%20Dates%20(Kara).pdf">Important Dates</a> 🇺🇸🔄</td>
 </tr>
 </tbody>
 </table>
