--- a/content/courses/ekonometri-i/01-ec.html
+++ b/content/courses/ekonometri-i/01-ec.html
@@ -38,16 +38,19 @@ weight: 21
 <tr class="header">
 <th align="left">1. Öğretim</th>
 <th align="left">2. Öğretim</th>
+<th align="left">Yaz Okulu</th>
 </tr>
 </thead>
 <tbody>
 <tr class="odd">
-<td align="left"><a href="../../../repo/akek/courses/ekonometri-i/EC/Ekonometri_I_1O%20-%20Ders%20Plani%20(Kara).pdf">Ders Planı</a> 🇹🇷 🔄</td>
-<td align="left"><a href="../../../repo/akek/courses/ekonometri-i/EC/Ekonometri_I_2O%20-%20Ders%20Plani%20(Kara).pdf">Ders Planı</a> 🇹🇷 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/ekonometri-i/EC/Ekonometri_I_1O%20-%20Ders%20Plani%20(Kara).pdf">Ders Planı</a> 🇹🇷🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/ekonometri-i/EC/Ekonometri_I_2O%20-%20Ders%20Plani%20(Kara).pdf">Ders Planı</a> 🇹🇷🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/ekonometri-i/EC/Ekonometri_I%20-%20Ders%20Plani%20(Kara).pdf">Ders Planı</a> 🇹🇷🔄</td>
 </tr>
 <tr class="even">
-<td align="left"><a href="../../../repo/akek/courses/ekonometri-i/EC/Ekonometri_I_1O%20-%20Onemli%20Gunler%20(Kara).pdf">Önemli Günler</a> 🇹🇷 🔥</td>
-<td align="left"><a href="../../../repo/akek/courses/ekonometri-i/EC/Ekonometri_I_2O%20-%20Onemli%20Gunler%20(Kara).pdf">Önemli Günler</a> 🇹🇷 🔥</td>
+<td align="left"><a href="../../../repo/akek/courses/ekonometri-i/EC/Ekonometri_I_1O%20-%20Onemli%20Gunler%20(Kara).pdf">Önemli Günler</a> 🇹🇷🔥</td>
+<td align="left"><a href="../../../repo/akek/courses/ekonometri-i/EC/Ekonometri_I_2O%20-%20Onemli%20Gunler%20(Kara).pdf">Önemli Günler</a> 🇹🇷🔥</td>
+<td align="left"><a href="../../../repo/akek/courses/ekonometri-i/EC/Ekonometri_I%20-%20Onemli%20Gunler%20(Kara).pdf">Önemli Günler</a> 🇹🇷🔥</td>
 </tr>
 </tbody>
 </table>
