--- a/content/courses/ekonometri-i/3-exams-ps.html
+++ b/content/courses/ekonometri-i/3-exams-ps.html
@@ -2,7 +2,7 @@
 title: Ödev ve Sınavlar
 linktitle: Ödev ve Sınavlar
 date: "2020-10-05"
-lastmod: "2020-10-14"
+lastmod: "2020-10-13"
 draft: false
 # toc: true
 type: docs
@@ -20,9 +20,36 @@ weight: 40
 
 
 <p><br></p>
-<div id="ekonometri-i" class="section level2">
-<h2>Ekonometri I</h2>
+<p>{{% alert note %}}
+İncelediğiniz sayfada 🇹🇷 <font color="red"><strong>Türkçe</strong></font>, 🇺🇸 <font color="red"><strong>İngilizce</strong></font>, 🔄 <font color="red"><strong>Güncellenecek</strong></font>, 🔥 <font color="red"><strong>Üzerinde Çalışılan</strong></font> ve ⛔ <font color="red"><strong>Artık Geçerli Olmayan</strong></font> içerikleri ifade eder…
+{{% /alert %}}</p>
+<div id="ödevler" class="section level2">
+<h2>Ödevler</h2>
+<ul>
+<li><a href="">CANVAS’ta Online Çoktan Seçmeli Ödev Nasıl Yapılır?</a> 🇹🇷🔥
+<ul>
+<li><a href="https://www.youtube.com/watch?v=OOqC0JrtOaI&amp;feature=youtu.be">DYS’de Online Çoktan Seçmeli Ödev Nasıl Yapılır?</a> 🇹🇷⛔</li>
+</ul></li>
+</ul>
 </div>
-<div id="exams" class="section level2">
-<h2>Exams</h2>
+<div id="sınavlar" class="section level2">
+<h2>Sınavlar</h2>
+<ul>
+<li><a href="../../../repo/akek/courses/ekonometri-i/Ekonometri_I%20-%20Ara%20Sinav%20Inceleme%20(Kara).pdf">Ara Sınav - İnceleme</a> 🇹🇷🔥
+<ul>
+<li><a href="../../../repo/akek/courses/ekonometri-i/Ekonometri_I%20-%20Ara%20Sinav%20Ornek%20Sorular%20(Kara).pdf">Ara Sınav - Örnek Sorular</a> 🇹🇷🔥</li>
+</ul></li>
+<li><a href="../../../repo/akek/courses/ekonometri-i/Ekonometri_I%20-%20Final%20Sinavi%20Inceleme%20(Kara).pdf">Final Sınavı - İnceleme</a> 🇹🇷🔥
+<ul>
+<li><a href="../../../repo/akek/courses/ekonometri-i/Ekonometri_I%20-%20Final%20Sinavi%20Ornek%20Sorular%20(Kara).pdf">Final Sınavı - Örnek Sorular</a> 🇹🇷🔥</li>
+</ul></li>
+<li><a href="">CANVAS’ta Online Sınav Nasıl Yapılır?</a> 🇹🇷🔥
+<ul>
+<li><a href="https://www.youtube.com/watch?v=V_Oyg-WGoK4&amp;feature=youtu.be">DYS’de Online Sınav Nasıl Yapılır?</a> 🇹🇷⛔</li>
+</ul></li>
+<li><a href="">CANVAS’ta Online Yazılı Sınav Nasıl Yapılır?</a> 🇹🇷🔥
+<ul>
+<li><a href="https://www.youtube.com/watch?v=wsUB6-fTxA8&amp;feature=youtu.be">DYS’de Online Yazılı Sınav Nasıl Yapılır?</a> 🇹🇷⛔</li>
+</ul></li>
+</ul>
 </div>
