--- a/content/courses/ekonometri-i/4-lectures.html
+++ b/content/courses/ekonometri-i/4-lectures.html
@@ -2,7 +2,7 @@
 title: Ders Notları
 linktitle: Ders Notları
 date: "2020-10-05"
-lastmod: "2020-10-14"
+lastmod: "2020-10-13"
 draft: false
 # toc: true
 type: docs
@@ -20,9 +20,13 @@ weight: 50
 
 
 <p><br></p>
-<div id="ekonometri-i" class="section level2">
-<h2>Ekonometri I</h2>
-</div>
-<div id="lectures" class="section level2">
-<h2>Lectures</h2>
+<p>{{% alert note %}}
+İncelediğiniz sayfada 🇹🇷 <font color="red"><strong>Türkçe</strong></font>, 🇺🇸 <font color="red"><strong>İngilizce</strong></font>, 🔄 <font color="red"><strong>Güncellenecek</strong></font>, 🔥 <font color="red"><strong>Üzerinde Çalışılan</strong></font> ve ⛔ <font color="red"><strong>Artık Geçerli Olmayan</strong></font> içerikleri ifade eder…
+{{% /alert %}}</p>
+<div id="hafta-1" class="section level2">
+<h2>Hafta #1</h2>
+<ul>
+<li><a href="">Video</a> 🇹🇷🔥</li>
+<li><a href="">Notlar</a> 🇹🇷🔥</li>
+</ul>
 </div>
