--- a/content/courses/ekonometri-ii/2-links-docs.html
+++ b/content/courses/ekonometri-ii/2-links-docs.html
@@ -37,6 +37,11 @@ weight: 30
 <li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitmWlaoQxv-_3bGhKG8C7FOX">Ekonometri II - Online-Ders (YouTube Playlist)</a> 🇹🇷🔄</li>
 <li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitkl1NkezEC8S9FEyBufaK13">R ile Ekonometri II - Video Serisi (YouTube Playlist)</a> 🇹🇷🔥</li>
 </ul></li>
+<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitmX4rFuzwEPV6LwSIkW2wfi">Ekonometrik Modelleme - Ders Videoları (YouTube Playlist)</a> 🇹🇷🔥
+<ul>
+<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitk83Yi1sMWWviJXi2oeUTiS">Ekonometrik Modelleme - Online-Ders (YouTube Playlist)</a> 🇹🇷🔄</li>
+<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitk5XQXH9JYm81CJrr4o9Zhl">R ile Ekonometrik Modelleme - Video Serisi (YouTube Playlist)</a> 🇹🇷🔥</li>
+</ul></li>
 <li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitml03Ea8sOjblldkZW-XU5J">R ile 15 Dakikada Kolay Kodlama - Video Serisi (YouTube Playlist)</a> 🇹🇷🔥</li>
 <li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitlK87V9m6L0hT2jfKmWkNct">R Rastgele - Video Serisi (YouTube Playlist)</a> 🇹🇷🔥</li>
 </ul>
