--- a/content/courses/ekonometri-ars-I-II/2-links-docs.html
+++ b/content/courses/ekonometri-ars-I-II/2-links-docs.html
@@ -37,7 +37,10 @@ weight: 30
 <li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitmWlaoQxv-_3bGhKG8C7FOX">Ekonometri II - Online-Ders (YouTube Playlist)</a> 🇹🇷🔄</li>
 <li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitkl1NkezEC8S9FEyBufaK13">R ile Ekonometri II - Video Serisi (YouTube Playlist)</a> 🇹🇷🔥</li>
 </ul></li>
-<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitlLsjTiK61hgnvcf4SnNoit">Ekonometri Araştırmaları I-II - Online-Ders (YouTube Playlist)</a> 🇹🇷🔄</li>
+<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitlLsjTiK61hgnvcf4SnNoit">Ekonometri Araştırmaları I-II - Online-Ders (YouTube Playlist)</a> 🇹🇷🔄
+<ul>
+<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitmQkGp98r9oiLgWEoW4Az3Y">R ile Ekonometri Araştırmaları I-II - Video Serisi (YouTube Playlist)</a> 🇹🇷🔥</li>
+</ul></li>
 <li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitmX4rFuzwEPV6LwSIkW2wfi">Ekonometrik Modelleme - Ders Videoları (YouTube Playlist)</a> 🇹🇷🔥
 <ul>
 <li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitk83Yi1sMWWviJXi2oeUTiS">Ekonometrik Modelleme - Online-Ders (YouTube Playlist)</a> 🇹🇷🔄</li>
