--- a/content/courses/_index.html
+++ b/content/courses/_index.html
@@ -9,6 +9,8 @@ layout: docs
 ---
 
 <script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
+<link href="/rmarkdown-libs/anchor-sections/anchor-sections.css" rel="stylesheet" />
+<script src="/rmarkdown-libs/anchor-sections/anchor-sections.js"></script>
 
 
 <p><img src="courses.gif" /></p>
