--- a/content/courses/ekonomi-i/3-exams-ps.html
+++ b/content/courses/ekonomi-i/3-exams-ps.html
@@ -17,6 +17,8 @@ weight: 40
 ---
 
 <script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
+<link href="/rmarkdown-libs/anchor-sections/anchor-sections.css" rel="stylesheet" />
+<script src="/rmarkdown-libs/anchor-sections/anchor-sections.js"></script>
 
 
 <p><br></p>
