--- a/content/courses/ekonomi-i/_index.html
+++ b/content/courses/ekonomi-i/_index.html
@@ -22,6 +22,8 @@ menu:
 ---
 
 <script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
+<link href="/rmarkdown-libs/anchor-sections/anchor-sections.css" rel="stylesheet" />
+<script src="/rmarkdown-libs/anchor-sections/anchor-sections.js"></script>
 
 
 <p><br></p>
