Econometrics I - Midterm Exam upload

--- a/content/courses/ekonometri-i/3-exams-ps.html
+++ b/content/courses/ekonometri-i/3-exams-ps.html
@@ -40,6 +40,7 @@ weight: 40
 <li><a href="../../../repo/akek/courses/ekonometri-i/Ekonometri_I%20-%20Ara%20Sinav%20Inceleme%20(Kara).pdf">Ara Sınav - İnceleme</a> 🇹🇷🔥
 <ul>
 <li><a href="../../../repo/akek/courses/ekonometri-i/Ekonometri_I%20-%20Ara%20Sinav%20Ornek%20Sorular%20(Kara).pdf">Ara Sınav - Örnek Sorular</a> 🇹🇷🔥</li>
+<li><a href="../../../repo/akek/courses/ekonometri-i/Ekonometri_II_AraSınav_A_Cevap%20(Kara).pdf">Ara Sınav - Güz 2020</a> 🇹🇷🔄</li>
 </ul></li>
 <li><a href="../../../repo/akek/courses/ekonometri-i/Ekonometri_I%20-%20Final%20Sinavi%20Inceleme%20(Kara).pdf">Final Sınavı - İnceleme</a> 🇹🇷🔥
 <ul>
