Ekonometri I - Hafta #4 uploaded.

--- a/content/courses/economics/4-lectures.html
+++ b/content/courses/economics/4-lectures.html
@@ -48,7 +48,7 @@ On the page you are reviewing, the icons and the contents they refer are as foll
 <td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%201%20(Kara).pptx">Slides</a></td>
 </tr>
 <tr class="even">
-<td align="left"><a href="../../../repo/akek/courses/ekonomi/Ekonomi%20-%20Hafta%201%20Notlar%20(Kara).pdf">Notlar</a> 🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/ekonomi/Ekonomi%20-%20Hafta%201%20Notlar%20(Kara).pdf">Notlar</a> 🔥</td>
 <td align="left"><a href="../../../repo/akek/courses/economics/Economics%20-%20Week%201%20Notes%20(Kara).pdf">Notes</a> 🔄</td>
 </tr>
 <tr class="odd">
