--- a/content/courses/ekonometri-i/4-lectures.html
+++ b/content/courses/ekonometri-i/4-lectures.html
@@ -29,6 +29,34 @@ weight: 50
 <h2>Hafta #1</h2>
 <ul>
 <li><a href="">Video</a> 🇹🇷🔥</li>
-<li><a href="">Notlar</a> 🇹🇷🔥</li>
+<li><a href="../../../repo/akek/courses/ekonometri-i/Ekonometri_II_-_Hafta_1.pdf">Notlar</a> 🇹🇷🔥</li>
+</ul>
+</div>
+<div id="hafta-2" class="section level2">
+<h2>Hafta #2</h2>
+<ul>
+<li><a href="">Video</a> 🇹🇷🔥</li>
+<li><a href="../../../repo/akek/courses/ekonometri-i/Ekonometri_II_-_Hafta_2.pdf">Notlar</a> 🇹🇷🔥</li>
+</ul>
+</div>
+<div id="hafta-3" class="section level2">
+<h2>Hafta #3</h2>
+<ul>
+<li><a href="">Video</a> 🇹🇷🔥</li>
+<li><a href="../../../repo/akek/courses/ekonometri-i/Ekonometri_II_-_Hafta_3.pdf">Notlar</a> 🇹🇷🔥</li>
+</ul>
+</div>
+<div id="hafta-4" class="section level2">
+<h2>Hafta #4</h2>
+<ul>
+<li><a href="">Video</a> 🇹🇷🔥</li>
+<li><a href="../../../repo/akek/courses/ekonometri-i/Ekonometri_II_-_Hafta_4.pdf">Notlar</a> 🇹🇷🔄</li>
+</ul>
+</div>
+<div id="hafta-5" class="section level2">
+<h2>Hafta #5</h2>
+<ul>
+<li><a href="">Video</a> 🇹🇷🔥</li>
+<li><a href="../../../repo/akek/courses/ekonometri-i/Ekonometri_II_-_Hafta_5.pdf">Notlar</a> 🇹🇷🔥</li>
 </ul>
 </div>
