2021 Spring Econometrics II update

--- a/content/courses/ekonometri-ii/01-ec.html
+++ b/content/courses/ekonometri-ii/01-ec.html
@@ -45,9 +45,9 @@ weight: 21
 </thead>
 <tbody>
 <tr class="odd">
-<td align="left"><a href="../../../repo/akek/courses/ekonometri-ii/EC/Ekonometri_II_1O%20-%20Ders%20Plani%20(Kara).pdf">Ders Planı</a> 🇹🇷🔥</td>
-<td align="left"><a href="../../../repo/akek/courses/ekonometri-ii/EC/Ekonometri_II_2O%20-%20Ders%20Plani%20(Kara).pdf">Ders Planı</a> 🇹🇷🔥</td>
-<td align="left"><a href="../../../repo/akek/courses/ekonometri-ii/EC/Ekonometri_II%20-%20Ders%20Plani%20(Kara).pdf">Ders Planı</a> 🇹🇷🔥</td>
+<td align="left"><a href="../../../repo/akek/courses/ekonometri-ii/EC/Ekonometri_II_1O%20-%20Ders%20Plani%20(Kara).pdf">Ders Planı</a> 🇹🇷🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/ekonometri-ii/EC/Ekonometri_II_2O%20-%20Ders%20Plani%20(Kara).pdf">Ders Planı</a> 🇹🇷🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/ekonometri-ii/EC/Ekonometri_II%20-%20Ders%20Plani%20(Kara).pdf">Ders Planı</a> 🇹🇷🔄</td>
 </tr>
 <tr class="even">
 <td align="left"><a href="../../../repo/akek/courses/ekonometri-ii/EC/Ekonometri_II_1O%20-%20Onemli%20Gunler%20(Kara).pdf">Önemli Günler</a> 🇹🇷🔥</td>
