--- a/content/courses/ekonometri-ii/4-lectures.html
+++ b/content/courses/ekonometri-ii/4-lectures.html
@@ -91,3 +91,24 @@ weight: 50
 <li><a href="../../../repo/akek/courses/ekonometri-ii/Ekonometri_II%20-%20Hafta%209%20(Kara).pdf">Notlar</a> 🇹🇷</li>
 </ul>
 </div>
+<div id="hafta-10" class="section level2">
+<h2>Hafta #10</h2>
+<ul>
+<li><a href="">Video</a> 🇹🇷🔥</li>
+<li><a href="../../../repo/akek/courses/ekonometri-ii/Ekonometri_II%20-%20Hafta%2010%20(Kara).pdf">Notlar</a> 🇹🇷🔥</li>
+</ul>
+</div>
+<div id="hafta-11" class="section level2">
+<h2>Hafta #11</h2>
+<ul>
+<li><a href="">Video</a> 🇹🇷🔥</li>
+<li><a href="../../../repo/akek/courses/ekonometri-ii/Ekonometri_II%20-%20Hafta%2011%20(Kara).pdf">Notlar</a> 🇹🇷🔥</li>
+</ul>
+</div>
+<div id="hafta-12" class="section level2">
+<h2>Hafta #12</h2>
+<ul>
+<li><a href="">Video</a> 🇹🇷🔥</li>
+<li><a href="../../../repo/akek/courses/ekonometri-ii/Ekonometri_II%20-%20Hafta%2012%20(Kara).pdf">Notlar</a> 🇹🇷🔥</li>
+</ul>
+</div>
