--- a/content/courses/ekonometri-i/01-ec.html
+++ b/content/courses/ekonometri-i/01-ec.html
@@ -47,7 +47,7 @@ weight: 21
 <tr class="odd">
 <td align="left"><a href="../../../repo/akek/courses/ekonometri-i/EC/Ekonometri_I_1O%20-%20Ders%20Plani%20(Kara).pdf">Ders Planı</a> 🇹🇷🔄</td>
 <td align="left"><a href="../../../repo/akek/courses/ekonometri-i/EC/Ekonometri_I_2O%20-%20Ders%20Plani%20(Kara).pdf">Ders Planı</a> 🇹🇷🔄</td>
-<td align="left"><a href="../../../repo/akek/courses/ekonometri-i/EC/Ekonometri_I%20-%20Ders%20Plani%20(Kara).pdf">Ders Planı</a> 🇹🇷🔄</td>
+<td align="left"><a href="../../../repo/akek/courses/ekonometri-i/EC/Ekonometri_I%20-%20Ders%20Plani%20(Kara).pdf">Ders Planı</a> 🇹🇷🔥</td>
 </tr>
 <tr class="even">
 <td align="left"><a href="../../../repo/akek/courses/ekonometri-i/EC/Ekonometri_I_1O%20-%20Onemli%20Gunler%20(Kara).pdf">Önemli Günler</a> 🇹🇷🔥</td>
