--- a/content/courses/ekonometri-i/4-lectures.html
+++ b/content/courses/ekonometri-i/4-lectures.html
@@ -60,3 +60,10 @@ weight: 50
 <li><a href="../../../repo/akek/courses/ekonometri-i/Ekonometri_II_-_Hafta_5.pdf">Notlar</a> 🇹🇷🔥</li>
 </ul>
 </div>
+<div id="hafta-6" class="section level2">
+<h2>Hafta #6</h2>
+<ul>
+<li><a href="">Video</a> 🇹🇷🔥</li>
+<li><a href="../../../repo/akek/courses/ekonometri-i/Ekonometri_II_-_Hafta_6.pdf">Notlar</a> 🇹🇷🔥</li>
+</ul>
+</div>
