--- a/content/courses/zaman-serileri-analizi/3-exams-ps.html
+++ b/content/courses/zaman-serileri-analizi/3-exams-ps.html
@@ -1,14 +1,14 @@
 ---
 title: Ödev ve Sınavlar
 linktitle: Ödev ve Sınavlar
-date: "2020-10-05"
-lastmod: "2020-10-13"
+date: "2021-03-04"
+lastmod: "2021-03-04"
 draft: false
 # toc: true
 type: docs
 
 menu:
-  ekonometri-ii:
+  zaman-serileri-analizi:
     parent: 
     weight: 40
 
@@ -37,13 +37,13 @@ weight: 40
 <div id="sınavlar" class="section level2">
 <h2>Sınavlar</h2>
 <ul>
-<li><a href="../../../repo/akek/courses/ekonometri-ii/Ekonometri_II%20-%20Ara%20Sinav%20Inceleme%20(Kara).pdf">Ara Sınav - İnceleme</a> 🇹🇷🔥
+<li><a href="../../../repo/akek/courses/zaman-serileri-analizi/Zaman%20Serileri%20Analizi%20-%20Ara%20Sinav%20Inceleme%20(Kara).pdf">Ara Sınav - İnceleme</a> 🇹🇷🔥
 <ul>
-<li><a href="../../../repo/akek/courses/ekonometri-ii/Ekonometri_II%20-%20Ara%20Sinav%20Ornek%20Sorular%20(Kara).pdf">Ara Sınav - Örnek Sorular</a> 🇹🇷🔥</li>
+<li><a href="../../../repo/akek/courses/zaman-serileri-analizi/Zaman%20Serileri%20Analizi%20-%20Ara%20Sinav%20Ornek%20Sorular%20(Kara).pdf">Ara Sınav - Örnek Sorular</a> 🇹🇷🔥</li>
 </ul></li>
-<li><a href="../../../repo/akek/courses/ekonometri-ii/Ekonometri_II%20-%20Final%20Sinavi%20Inceleme%20(Kara).pdf">Final Sınavı - İnceleme</a> 🇹🇷🔥
+<li><a href="../../../repo/akek/courses/zaman-serileri-analizi/Zaman%20Serileri%20Analizi%20-%20Final%20Sinavi%20Inceleme%20(Kara).pdf">Final Sınavı - İnceleme</a> 🇹🇷🔥
 <ul>
-<li><a href="../../../repo/akek/courses/ekonometri-ii/Ekonometri_II%20-%20Final%20Sinavi%20Ornek%20Sorular%20(Kara).pdf">Final Sınavı - Örnek Sorular</a> 🇹🇷🔥</li>
+<li><a href="../../../repo/akek/courses/zaman-serileri-analizi/Zaman%20Serileri%20Analizi%20-%20Final%20Sinavi%20Ornek%20Sorular%20(Kara).pdf">Final Sınavı - Örnek Sorular</a> 🇹🇷🔥</li>
 </ul></li>
 <li><a href="">CANVAS’ta Online Sınav Nasıl Yapılır?</a> 🇹🇷🔥
 <ul>
