--- a/content/courses/zaman-serileri-analizi/4-lectures.html
+++ b/content/courses/zaman-serileri-analizi/4-lectures.html
@@ -1,14 +1,14 @@
 ---
 title: Ders Notları
 linktitle: Ders Notları
-date: "2020-10-05"
-lastmod: "2020-10-13"
+date: "2021-03-04"
+lastmod: "2021-03-04"
 draft: false
 # toc: true
 type: docs
 
 menu:
-  ekonometrik-modelleme:
+  zaman-serileri-analizi:
     parent: 
     weight: 50
 
@@ -29,27 +29,27 @@ weight: 50
 <h2>Hafta #1</h2>
 <ul>
 <li><a href="">Video</a> 🇹🇷🔥</li>
-<li><a href="../../../repo/akek/courses/ekonometrik-modelleme/Ekonometrik%20Modelleme_-_Hafta_1.pdf">Notlar</a> 🇹🇷🔥</li>
+<li><a href="../../../repo/akek/courses/zaman-serileri-analizi/Zaman%20Serileri%20Analizi_-_Hafta_1.pdf">Notlar</a> 🇹🇷🔥</li>
 </ul>
 </div>
 <div id="hafta-2" class="section level2">
 <h2>Hafta #2</h2>
 <ul>
 <li><a href="">Video</a> 🇹🇷🔥</li>
-<li><a href="../../../repo/akek/courses/ekonometrik-modelleme/Ekonometrik%20Modelleme_-_Hafta_2.pdf">Notlar</a> 🇹🇷🔥</li>
+<li><a href="../../../repo/akek/courses/zaman-serileri-analizi/Zaman%20Serileri%20Analizi_-_Hafta_2.pdf">Notlar</a> 🇹🇷🔥</li>
 </ul>
 </div>
 <div id="hafta-3" class="section level2">
 <h2>Hafta #3</h2>
 <ul>
 <li><a href="">Video</a> 🇹🇷🔥</li>
-<li><a href="../../../repo/akek/courses/ekonometrik-modelleme/Ekonometrik%20Modelleme_-_Hafta_3.pdf">Notlar</a> 🇹🇷🔥</li>
+<li><a href="../../../repo/akek/courses/zaman-serileri-analizi/Zaman%20Serileri%20Analizi_-_Hafta_3.pdf">Notlar</a> 🇹🇷🔥</li>
 </ul>
 </div>
 <div id="hafta-4" class="section level2">
 <h2>Hafta #4</h2>
 <ul>
 <li><a href="">Video</a> 🇹🇷🔥</li>
-<li><a href="../../../repo/akek/courses/ekonometrik-modelleme/Ekonometrik%20Modelleme_-_Hafta_4.pdf">Notlar</a> 🇹🇷🔥</li>
+<li><a href="../../../repo/akek/courses/zaman-serileri-analizi/Zaman%20Serileri%20Analizi_-_Hafta_4.pdf">Notlar</a> 🇹🇷🔥</li>
 </ul>
 </div>
