--- a/content/courses/ekonometrik-modelleme/2-links-docs.html
+++ b/content/courses/ekonometrik-modelleme/2-links-docs.html
@@ -34,10 +34,15 @@ weight: 30
 <li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitkkBYmrluukSunncmvL7JSF">Ekonometri I - Online-Ders (YouTube Playlist)</a> 🇹🇷🔄</li>
 <li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitlwPLlG1nEh7TczOXZrYw-9">R ile Ekonometri I - Video Serisi (YouTube Playlist)</a> 🇹🇷🔥</li>
 </ul></li>
-<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitlL_CbPiev5Lu0j3dKvQq7x">Ekonometri II - Ders Videoları (YouTube Playlist)</a> 🇹🇷🔥
+<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitlL_CbPiev5Lu0j3dKvQq7x">Ekonometri II - Ders Videoları (YouTube Playlist)</a> 🇹🇷🔄
 <ul>
 <li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitmWlaoQxv-_3bGhKG8C7FOX">Ekonometri II - Online-Ders (YouTube Playlist)</a> 🇹🇷🔄</li>
 <li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitkl1NkezEC8S9FEyBufaK13">R ile Ekonometri II - Video Serisi (YouTube Playlist)</a> 🇹🇷🔥</li>
+</ul></li>
+<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitnuvg9CvLkS3pAv6JAAWzz6">Zaman Serileri Analizi - Ders Videoları (YouTube Playlist)</a> 🇹🇷🔥
+<ul>
+<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitknof9XxlP73K1crTkoUZtQ">Zaman Serileri Analizi - Online-Ders (YouTube Playlist)</a> 🇹🇷🔄</li>
+<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitnFyDakbzZFI5vJ0oSiAooU">R ile Zaman Serileri Analizi - Video Serisi (YouTube Playlist)</a> 🇹🇷🔥</li>
 </ul></li>
 <li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitlLsjTiK61hgnvcf4SnNoit">Ekonometri Araştırmaları I-II - Online-Ders (YouTube Playlist)</a> 🇹🇷🔄
 <ul>
@@ -49,7 +54,7 @@ weight: 30
 <li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitk5XQXH9JYm81CJrr4o9Zhl">R ile Ekonometrik Modelleme - Video Serisi (YouTube Playlist)</a> 🇹🇷🔥</li>
 </ul></li>
 <li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitml03Ea8sOjblldkZW-XU5J">R ile 15 Dakikada Kolay Kodlama - Video Serisi (YouTube Playlist)</a> 🇹🇷🔥</li>
-<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitlK87V9m6L0hT2jfKmWkNct">R Rastgele - Video Serisi (YouTube Playlist)</a> 🇹🇷🔥</li>
+<li><a href="https://www.youtube.com/playlist?list=PLGdlUqXbpitlK87V9m6L0hT2jfKmWkNct">R Rastgele - Video Serisi (YouTube Playlist)</a> 🇹🇷🔄</li>
 </ul>
 </div>
 <div id="diğer-dokümanlar" class="section level2">
