--- a/content/courses/zaman-serileri-analizi/4-lectures.html
+++ b/content/courses/zaman-serileri-analizi/4-lectures.html
@@ -29,27 +29,27 @@ weight: 50
 <h2>Hafta #1</h2>
 <ul>
 <li><a href="">Video</a> 🇹🇷🔥</li>
-<li><a href="../../../repo/akek/courses/zaman-serileri-analizi/Zaman%20Serileri%20Analizi_-_Hafta_1.pdf">Notlar</a> 🇹🇷🔥</li>
+<li><a href="../../../repo/akek/courses/zaman-serileri-analizi/Zaman_Serileri_Analizi_-Hafta_1.pdf">Notlar</a> 🇹🇷🔄</li>
 </ul>
 </div>
 <div id="hafta-2" class="section level2">
 <h2>Hafta #2</h2>
 <ul>
 <li><a href="">Video</a> 🇹🇷🔥</li>
-<li><a href="../../../repo/akek/courses/zaman-serileri-analizi/Zaman%20Serileri%20Analizi_-_Hafta_2.pdf">Notlar</a> 🇹🇷🔥</li>
+<li><a href="../../../repo/akek/courses/zaman-serileri-analizi/Zaman_Serileri_Analizi_-_Hafta_2.pdf">Notlar</a> 🇹🇷🔥</li>
 </ul>
 </div>
 <div id="hafta-3" class="section level2">
 <h2>Hafta #3</h2>
 <ul>
 <li><a href="">Video</a> 🇹🇷🔥</li>
-<li><a href="../../../repo/akek/courses/zaman-serileri-analizi/Zaman%20Serileri%20Analizi_-_Hafta_3.pdf">Notlar</a> 🇹🇷🔥</li>
+<li><a href="../../../repo/akek/courses/zaman-serileri-analizi/Zaman_Serileri_Analizi_-_Hafta_3.pdf">Notlar</a> 🇹🇷🔥</li>
 </ul>
 </div>
 <div id="hafta-4" class="section level2">
 <h2>Hafta #4</h2>
 <ul>
 <li><a href="">Video</a> 🇹🇷🔥</li>
-<li><a href="../../../repo/akek/courses/zaman-serileri-analizi/Zaman%20Serileri%20Analizi_-_Hafta_4.pdf">Notlar</a> 🇹🇷🔥</li>
+<li><a href="../../../repo/akek/courses/zaman-serileri-analizi/Zaman_Serileri_Analizi_-_Hafta_4.pdf">Notlar</a> 🇹🇷🔥</li>
 </ul>
 </div>
