time series week 1 r codes update

--- a/content/courses/zaman-serileri-analizi/4-lectures.html
+++ b/content/courses/zaman-serileri-analizi/4-lectures.html
@@ -30,6 +30,8 @@ weight: 50
 <ul>
 <li><a href="">Video</a> 🇹🇷🔥</li>
 <li><a href="../../../repo/akek/courses/zaman-serileri-analizi/Zaman_Serileri_Analizi_-_Hafta_1.pdf">Notlar</a> 🇹🇷</li>
+<li><a href="../../../repo/akek/r/zaman-serileri-analizi//Hafta_1/Hafta_1_Notlar.html">Uygulama - HTML</a> 🇹🇷🔄</li>
+<li><a href="../../../repo/akek/r/zaman-serileri-analizi//Hafta_1/Hafta_1_Notlar.Rmd">Uygulama - RMarkdown</a> 🇹🇷🔄</li>
 </ul>
 </div>
 <div id="hafta-2" class="section level2">
