--- a/content/courses/zaman-serileri-analizi/4-lectures.html
+++ b/content/courses/zaman-serileri-analizi/4-lectures.html
@@ -29,29 +29,33 @@ weight: 50
 <h2>Hafta #1</h2>
 <ul>
 <li><a href="">Video</a> 🇹🇷🔥</li>
-<li><a href="../../../repo/akek/courses/zaman-serileri-analizi/Zaman_Serileri_Analizi_-_Hafta_1.pdf">Notlar</a> 🇹🇷</li>
-<li><a href="../../../repo/akek/r/zaman-serileri-analizi//Hafta_1/Hafta_1_Notlar.html">Uygulama - HTML</a> 🇹🇷🔄</li>
-<li><a href="../../../repo/akek/r/zaman-serileri-analizi//Hafta_1/Hafta_1_Notlar.Rmd">Uygulama - RMarkdown</a> 🇹🇷🔄</li>
+<li><a href="../../../repo/akek/courses/zaman-serileri-analizi/Zaman_Serileri_Analizi_-_Hafta_1.pdf">Slaytlar</a> 🇹🇷</li>
+<li><a href="../../../repo/akek/r/zaman-serileri-analizi//Hafta_1/Hafta_1_Uygulama.html">Uygulama - HTML</a> 🇹🇷🔄
+<ul>
+<li><a href="../../../repo/akek/r/zaman-serileri-analizi//Hafta_1/Hafta_1_Uygulama.Rmd">Uygulama - RMarkdown</a> 🇹🇷🔄</li>
+<li><a href="../../../repo/akek/r/zaman-serileri-analizi//Hafta_1/clean-water.xlsx">Data - <code>clean-water.xlsx</code></a></li>
+<li><a href="../../../repo/akek/r/zaman-serileri-analizi//Hafta_1/dam_occupancy.csv">Data - <code>dam_occupancy.csv</code></a></li>
+</ul></li>
 </ul>
 </div>
 <div id="hafta-2" class="section level2">
 <h2>Hafta #2</h2>
 <ul>
 <li><a href="">Video</a> 🇹🇷🔥</li>
-<li><a href="../../../repo/akek/courses/zaman-serileri-analizi/Zaman_Serileri_Analizi_-_Hafta_2.pdf">Notlar</a> 🇹🇷</li>
+<li><a href="../../../repo/akek/courses/zaman-serileri-analizi/Zaman_Serileri_Analizi_-_Hafta_2.pdf">Slaytlar</a> 🇹🇷</li>
 </ul>
 </div>
 <div id="hafta-3" class="section level2">
 <h2>Hafta #3</h2>
 <ul>
 <li><a href="">Video</a> 🇹🇷🔥</li>
-<li><a href="../../../repo/akek/courses/zaman-serileri-analizi/Zaman_Serileri_Analizi_-_Hafta_3.pdf">Notlar</a> 🇹🇷🔥</li>
+<li><a href="../../../repo/akek/courses/zaman-serileri-analizi/Zaman_Serileri_Analizi_-_Hafta_3.pdf">Slaytlar</a> 🇹🇷🔥</li>
 </ul>
 </div>
 <div id="hafta-4" class="section level2">
 <h2>Hafta #4</h2>
 <ul>
 <li><a href="">Video</a> 🇹🇷🔥</li>
-<li><a href="../../../repo/akek/courses/zaman-serileri-analizi/Zaman_Serileri_Analizi_-_Hafta_4.pdf">Notlar</a> 🇹🇷🔥</li>
+<li><a href="../../../repo/akek/courses/zaman-serileri-analizi/Zaman_Serileri_Analizi_-_Hafta_4.pdf">Slaytlar</a> 🇹🇷🔥</li>
 </ul>
 </div>
