final final update with showing html files

--- a/content/courses/zaman-serileri-analizi/4-lectures.html
+++ b/content/courses/zaman-serileri-analizi/4-lectures.html
@@ -17,8 +17,6 @@ weight: 50
 ---
 
 <script src="/rmarkdown-libs/header-attrs/header-attrs.js"></script>
-<link href="/rmarkdown-libs/anchor-sections/anchor-sections.css" rel="stylesheet" />
-<script src="/rmarkdown-libs/anchor-sections/anchor-sections.js"></script>
 
 
 <p><br></p>
@@ -30,7 +28,7 @@ weight: 50
 <ul>
 <li><a href="">Video</a> 🇹🇷🔥</li>
 <li><a href="../../../repo/akek/courses/zaman-serileri-analizi/Zaman_Serileri_Analizi_-_Hafta_1.pdf">Slaytlar</a> 🇹🇷</li>
-<li><a href="../../../repo/akek/r/zaman-serileri-analizi//Hafta_1/Hafta_1_Uygulama.html">Uygulama - HTML</a> 🇹🇷🔄
+<li><a href="https://karaomer.bitbucket.io/akek/r/zaman-serileri-analizi/Hafta_1_Uygulama.html">Uygulama - HTML</a> 🇹🇷🔄
 <ul>
 <li><a href="../../../repo/akek/r/zaman-serileri-analizi//Hafta_1/Hafta_1_Uygulama.Rmd">Uygulama - RMarkdown</a> 🇹🇷🔄</li>
 <li><a href="../../../repo/akek/r/zaman-serileri-analizi//Hafta_1/clean-water.xlsx">Data - <code>clean-water.xlsx</code></a></li>
