--- a/content/courses/ekonometrik-modelleme/4-lectures.html
+++ b/content/courses/ekonometrik-modelleme/4-lectures.html
@@ -31,6 +31,7 @@ weight: 50
 <li><a href="https://akademiekonometri.bitbucket.io/akek/r/courses/zaman-serileri-analizi/Zaman_Serileri_Analizi_-_Hafta_1_Uygulama.html">Uygulama - HTML</a> 🇹🇷🔄
 <ul>
 <li><a href="../../../repo/akek/r/courses/zaman-serileri-analizi/Hafta_1/Zaman_Serileri_Analizi_-_Hafta_1_Uygulama.Rmd">Uygulama - RMarkdown</a> 🇹🇷🔄</li>
+<li><a href="../../../repo/akek/r/courses/zaman-serileri-analizi/Hafta_1/Zaman_Serileri_Analizi_-_Hafta_1_Uygulama.R">Uygulama - R</a> 🇹🇷🔄</li>
 <li><a href="../../../repo/akek/r/courses/zaman-serileri-analizi/Hafta_1/clean-water.xlsx">Data - <code>clean-water.xlsx</code></a></li>
 <li><a href="../../../repo/akek/r/courses/zaman-serileri-analizi/Hafta_1/dam_occupancy.csv">Data - <code>dam_occupancy.csv</code></a></li>
 </ul></li>
@@ -41,6 +42,11 @@ weight: 50
 <ul>
 <li><a href="">Video</a> 🇹🇷🔥</li>
 <li><a href="../../../repo/akek/courses/zaman-serileri-analizi/Zaman_Serileri_Analizi_-_Hafta_2.pdf">Slaytlar</a> 🇹🇷</li>
+<li><a href="https://akademiekonometri.bitbucket.io/akek/r/courses/zaman-serileri-analizi/Zaman_Serileri_Analizi_-_Hafta_2_Uygulama.html">Uygulama - HTML</a> 🇹🇷🔄
+<ul>
+<li><a href="../../../repo/akek/r/courses/zaman-serileri-analizi/Hafta_2/Zaman_Serileri_Analizi_-_Hafta_2_Uygulama.Rmd">Uygulama - RMarkdown</a> 🇹🇷🔄</li>
+<li><a href="../../../repo/akek/r/courses/zaman-serileri-analizi/Hafta_2/Zaman_Serileri_Analizi_-_Hafta_2_Uygulama.R">Uygulama - R</a> 🇹🇷🔄</li>
+</ul></li>
 </ul>
 </div>
 <div id="hafta-3" class="section level2">
