rbind.io to netlify.app further changes

--- a/static/repo/akek/r/courses/zaman-serileri-analizi/Hafta_2/Zaman_Serileri_Analizi_-_Hafta_2_Uygulama.html
+++ b/static/repo/akek/r/courses/zaman-serileri-analizi/Hafta_2/Zaman_Serileri_Analizi_-_Hafta_2_Uygulama.html
@@ -348,7 +348,7 @@ div.tocify {
 <h1 class="title toc-ignore">Zaman Serileri Analizi</h1>
 <h3 class="subtitle">Hafta #2 - Uygulama</h3>
 <h4 class="author"><a href="mailto:okara@ogu.edu.tr">Dr. Ömer Kara</a></h4>
-<h4 class="date">Tuesday, April 20, 2021</h4>
+<h4 class="date">Tuesday, April 27, 2021</h4>
 
 </div>
 
@@ -419,7 +419,7 @@ div.main-container {
 </ul></li>
 <li>Bu modellerin uygulaması için <a href="https://cran.r-project.org/web/packages/wooldridge/index.html"><code>wooldridge</code></a> R paketinden direkt olarak veri indirip yüklemeye çalışalım.
 <ul>
-<li><code>wooldridge</code> R paketindeki verileri incelemek için <a href="https://cran.r-project.org/web/packages/wooldridge/index.html">wooldridge CRAN klavuzunu</a> inceleyebilirsiniz.</li>
+<li><code>wooldridge</code> R paketindeki verileri incelemek için <a href="https://cran.r-project.org/web/packages/wooldridge/wooldridge.pdf">wooldridge CRAN klavuzunu</a> inceleyebilirsiniz.</li>
 <li>Bu verilerin daha detayli bir gösterimi ve uygulama için ise <a href="https://justinmshea.github.io/wooldridge/index.html">bu linke</a> bakabilirsiniz.</li>
 </ul></li>
 <li><code>wooldridge</code> R paketinde mevcut olan veriyi, verinin ismini kullanarak yüklemek için 1 fonksiyon kullanacağız: <code>data</code>.
