--- a/static/repo/akek/r/r-rastgele/5-Zaman_Serisi_ile_Modelleme/1-VAR_ve_VECM/2-VAR-Ornek_2-Detayli/_figs-tabs/summary_statistics.html
+++ b/static/repo/akek/r/r-rastgele/5-Zaman_Serisi_ile_Modelleme/1-VAR_ve_VECM/2-VAR-Ornek_2-Detayli/_figs-tabs/summary_statistics.html
@@ -1,9 +1,9 @@
 
 <table style="text-align:center"><tr><td colspan="10" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left"></td><td>Variable</td><td># of Obs.</td><td>Min.</td><td>Max.</td><td>Median</td><td>Mean</td><td>Std. Dev.</td><td>Skewness</td><td>Kurtosis</td></tr>
-<tr><td colspan="10" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">1</td><td>Real Current Account Deficit (RCAD)</td><td>15</td><td>-109160262.02</td><td>-9199646.31</td><td>-65279329.94</td><td>-60109103.89</td><td>2.901978e+07</td><td>0.06</td><td>-1.21</td></tr>
-<tr><td style="text-align:left">2</td><td>Real GDP (RGDP)</td><td>15</td><td>673702942.74</td><td>4450278468.09</td><td>1569672114.92</td><td>1904014369.26</td><td>1.146129e+09</td><td>0.82</td><td>-0.59</td></tr>
-<tr><td style="text-align:left">3</td><td>Real Exchange Rate (RER)</td><td>15</td><td>76.22</td><td>127.72</td><td>105.86</td><td>103.70</td><td>1.532000e+01</td><td>-0.43</td><td>-0.92</td></tr>
-<tr><td style="text-align:left">4</td><td>% Growth in Real Current Account Deficit (Gr.RCAD)</td><td>14</td><td>-71.86</td><td>651.37</td><td>17.49</td><td>46.88</td><td>1.770900e+02</td><td>2.79</td><td>6.72</td></tr>
-<tr><td style="text-align:left">5</td><td>% Growth in Real GDP (Gr.RGDP)</td><td>14</td><td>0.44</td><td>20.41</td><td>14.84</td><td>14.55</td><td>5.130000e+00</td><td>-1.21</td><td>1.42</td></tr>
-<tr><td style="text-align:left">6</td><td>% Growth in Real Exchange Rate (Gr.RER)</td><td>14</td><td>-13.86</td><td>16.27</td><td>-5.98</td><td>-2.79</td><td>8.960000e+00</td><td>0.55</td><td>-0.93</td></tr>
+<tr><td colspan="10" style="border-bottom: 1px solid black"></td></tr><tr><td style="text-align:left">1</td><td>Real Current Account Deficit (RCAD)</td><td>15</td><td>-109160262.02</td><td>-9199646.31</td><td>-65279329.94</td><td>-60109103.89</td><td>29019778.69</td><td>0.06</td><td>-1.21</td></tr>
+<tr><td style="text-align:left">2</td><td>Real GDP (RGDP)</td><td>15</td><td>673702942.74</td><td>4450278468.09</td><td>1569672114.92</td><td>1904014369.26</td><td>1146129005.83</td><td>0.82</td><td>-0.59</td></tr>
+<tr><td style="text-align:left">3</td><td>Real Exchange Rate (RER)</td><td>15</td><td>76.22</td><td>127.72</td><td>105.86</td><td>103.70</td><td>15.32</td><td>-0.43</td><td>-0.92</td></tr>
+<tr><td style="text-align:left">4</td><td>% Growth in Real Current Account Deficit (Gr.RCAD)</td><td>14</td><td>-71.86</td><td>651.37</td><td>17.49</td><td>46.88</td><td>177.09</td><td>2.79</td><td>6.72</td></tr>
+<tr><td style="text-align:left">5</td><td>% Growth in Real GDP (Gr.RGDP)</td><td>14</td><td>0.44</td><td>20.41</td><td>14.84</td><td>14.55</td><td>5.13</td><td>-1.21</td><td>1.42</td></tr>
+<tr><td style="text-align:left">6</td><td>% Growth in Real Exchange Rate (Gr.RER)</td><td>14</td><td>-13.86</td><td>16.27</td><td>-5.98</td><td>-2.79</td><td>8.96</td><td>0.55</td><td>-0.93</td></tr>
 <tr><td colspan="10" style="border-bottom: 1px solid black"></td></tr></table>
