time series week 3 update

--- a/content/courses/ekonometri-ars-I-II/4-lectures.html
+++ b/content/courses/ekonometri-ars-I-II/4-lectures.html
@@ -88,6 +88,13 @@ weight: 50
 <li>🇹🇷🔥</li>
 </ul>
 </div>
+<div id="örnek-makale-sunumlar" class="section level4">
+<h4>Örnek Makale Sunumlar</h4>
+<ul>
+<li><a href="../../../repo/akek/courses/ekonometri-ars/Ornek_1_(Crypto).pdf">Örnek Sunum 1</a> 🇺🇸</li>
+<li><a href="../../../repo/akek/courses/ekonometri-ars/Ornek_2_(Meat%20Demand).pdf">Örnek Sunum 2</a> 🇺🇸</li>
+</ul>
+</div>
 </div>
 <div id="akademik-makale-yayınlama-esasları" class="section level2">
 <h2>Akademik Makale Yayınlama Esasları</h2>
