--- a/content/courses/zaman-serileri-analizi/4-lectures.html
+++ b/content/courses/zaman-serileri-analizi/4-lectures.html
@@ -28,10 +28,10 @@ weight: 50
 <ul>
 <li><a href="">Video</a> 🇹🇷🔥</li>
 <li><a href="../../../repo/akek/courses/zaman-serileri-analizi/Zaman_Serileri_Analizi_-_Hafta_1.pdf">Slaytlar</a> 🇹🇷</li>
-<li><a href="https://akademiekonometri.bitbucket.io/akek/r/courses/zaman-serileri-analizi/Zaman_Serileri_Analizi_-_Hafta_1_Uygulama.html">Uygulama - HTML</a> 🇹🇷🔄
+<li><a href="https://akademiekonometri.bitbucket.io/akek/r/courses/zaman-serileri-analizi/Zaman_Serileri_Analizi_-_Hafta_1_Uygulama.html">Uygulama - HTML</a> 🇹🇷
 <ul>
-<li><a href="../../../repo/akek/r/courses/zaman-serileri-analizi/Hafta_1/Zaman_Serileri_Analizi_-_Hafta_1_Uygulama.Rmd">Uygulama - RMarkdown</a> 🇹🇷🔄</li>
-<li><a href="../../../repo/akek/r/courses/zaman-serileri-analizi/Hafta_1/Zaman_Serileri_Analizi_-_Hafta_1_Uygulama.R">Uygulama - R</a> 🇹🇷🔄</li>
+<li><a href="../../../repo/akek/r/courses/zaman-serileri-analizi/Hafta_1/Zaman_Serileri_Analizi_-_Hafta_1_Uygulama.Rmd">Uygulama - RMarkdown</a> 🇹🇷</li>
+<li><a href="../../../repo/akek/r/courses/zaman-serileri-analizi/Hafta_1/Zaman_Serileri_Analizi_-_Hafta_1_Uygulama.R">Uygulama - R</a> 🇹🇷</li>
 <li><a href="../../../repo/akek/r/courses/zaman-serileri-analizi/Hafta_1/clean-water.xlsx">Data - <code>clean-water.xlsx</code></a></li>
 <li><a href="../../../repo/akek/r/courses/zaman-serileri-analizi/Hafta_1/dam_occupancy.csv">Data - <code>dam_occupancy.csv</code></a></li>
 </ul></li>
@@ -42,10 +42,10 @@ weight: 50
 <ul>
 <li><a href="">Video</a> 🇹🇷🔥</li>
 <li><a href="../../../repo/akek/courses/zaman-serileri-analizi/Zaman_Serileri_Analizi_-_Hafta_2.pdf">Slaytlar</a> 🇹🇷</li>
-<li><a href="https://akademiekonometri.bitbucket.io/akek/r/courses/zaman-serileri-analizi/Zaman_Serileri_Analizi_-_Hafta_2_Uygulama.html">Uygulama - HTML</a> 🇹🇷🔄
+<li><a href="https://akademiekonometri.bitbucket.io/akek/r/courses/zaman-serileri-analizi/Zaman_Serileri_Analizi_-_Hafta_2_Uygulama.html">Uygulama - HTML</a> 🇹🇷
 <ul>
-<li><a href="../../../repo/akek/r/courses/zaman-serileri-analizi/Hafta_2/Zaman_Serileri_Analizi_-_Hafta_2_Uygulama.Rmd">Uygulama - RMarkdown</a> 🇹🇷🔄</li>
-<li><a href="../../../repo/akek/r/courses/zaman-serileri-analizi/Hafta_2/Zaman_Serileri_Analizi_-_Hafta_2_Uygulama.R">Uygulama - R</a> 🇹🇷🔄</li>
+<li><a href="../../../repo/akek/r/courses/zaman-serileri-analizi/Hafta_2/Zaman_Serileri_Analizi_-_Hafta_2_Uygulama.Rmd">Uygulama - RMarkdown</a> 🇹🇷</li>
+<li><a href="../../../repo/akek/r/courses/zaman-serileri-analizi/Hafta_2/Zaman_Serileri_Analizi_-_Hafta_2_Uygulama.R">Uygulama - R</a> 🇹🇷</li>
 </ul></li>
 </ul>
 </div>
@@ -53,7 +53,7 @@ weight: 50
 <h2>Hafta #3</h2>
 <ul>
 <li><a href="">Video</a> 🇹🇷🔥</li>
-<li><a href="../../../repo/akek/courses/zaman-serileri-analizi/Zaman_Serileri_Analizi_-_Hafta_3.pdf">Slaytlar</a> 🇹🇷</li>
+<li><a href="../../../repo/akek/courses/zaman-serileri-analizi/Zaman_Serileri_Analizi_-_Hafta_3.pdf">Slaytlar</a> 🇹🇷🔄</li>
 <li><a href="https://akademiekonometri.bitbucket.io/akek/r/courses/zaman-serileri-analizi/Zaman_Serileri_Analizi_-_Hafta_3_Uygulama.html">Uygulama - HTML</a> 🇹🇷🔄
 <ul>
 <li><a href="../../../repo/akek/r/courses/zaman-serileri-analizi/Hafta_3/Zaman_Serileri_Analizi_-_Hafta_3_Uygulama.Rmd">Uygulama - RMarkdown</a> 🇹🇷🔄</li>
@@ -66,5 +66,10 @@ weight: 50
 <ul>
 <li><a href="">Video</a> 🇹🇷🔥</li>
 <li><a href="../../../repo/akek/courses/zaman-serileri-analizi/Zaman_Serileri_Analizi_-_Hafta_4.pdf">Slaytlar</a> 🇹🇷🔥</li>
+<li><a href="https://akademiekonometri.bitbucket.io/akek/r/courses/zaman-serileri-analizi/Zaman_Serileri_Analizi_-_Hafta_4_Uygulama.html">Uygulama - HTML</a> 🇹🇷🔥
+<ul>
+<li><a href="../../../repo/akek/r/courses/zaman-serileri-analizi/Hafta_4/Zaman_Serileri_Analizi_-_Hafta_4_Uygulama.Rmd">Uygulama - RMarkdown</a> 🇹🇷🔥</li>
+<li><a href="../../../repo/akek/r/courses/zaman-serileri-analizi/Hafta_4/Zaman_Serileri_Analizi_-_Hafta_4_Uygulama.R">Uygulama - R</a> 🇹🇷🔥</li>
+</ul></li>
 </ul>
 </div>
