time series week #3 update

--- a/static/repo/akek/r/courses/zaman-serileri-analizi/Hafta_3/Zaman_Serileri_Analizi_-_Hafta_3_Uygulama.html
+++ b/static/repo/akek/r/courses/zaman-serileri-analizi/Hafta_3/Zaman_Serileri_Analizi_-_Hafta_3_Uygulama.html
@@ -356,7 +356,7 @@ div.tocify {
 <h1 class="title toc-ignore">Zaman Serileri Analizi</h1>
 <h3 class="subtitle">Hafta #3 - Uygulama</h3>
 <h4 class="author"><a href="mailto:okara@ogu.edu.tr">Dr. Ömer Kara</a></h4>
-<h4 class="date">Wednesday, June 02, 2021</h4>
+<h4 class="date">Friday, June 04, 2021</h4>
 
 </div>
 
@@ -1057,8 +1057,8 @@ ceteris paribus koşulu altında, bağımsız değişken <span class="math inlin
 </ul></li>
 <li>Daha sonra model tahminini kullanarak etki çarpanı ve uzun dönem çarpanı değerlerini hesaplayalım.
 <ul>
-<li>Etki çarpanı (kısa dönem esnekliği): <span class="math inline">\(\delta_{0}\)</span></li>
-<li>Uzun dönem çarpanı (uzun dönem esnekliği): <span class="math inline">\(\delta_{0} + \delta_{1} + \delta_{2} + \delta_{3} + \delta_{4}\)</span></li>
+<li>Etki çarpanı (kısa dönem esnekliği): <span class="math inline">\(\hat{\delta}_{0}\)</span></li>
+<li>Uzun dönem çarpanı (uzun dönem esnekliği): <span class="math inline">\(\hat{\delta}_{0} + \hat{\delta}_{1} + \hat{\delta}_{2} + \hat{\delta}_{3} + \hat{\delta}_{4}\)</span></li>
 </ul></li>
 <li>Son olarak model tahminini kullanarak aşağıdaki hipotezleri <a href="https://cran.r-project.org/web/packages/car/index.html"><code>car</code></a> R paketindeki <code>linearHypothesis</code> fonksiyonuyla test edelim.
 <ul>
@@ -1286,7 +1286,7 @@ ceteris paribus koşulu altında, bağımsız değişken <span class="math inlin
 </ul></li>
 <li>Daha sonra Model 1 tahminini kullanarak uzun dönem çarpanı değerini hesaplayalım.
 <ul>
-<li>Uzun dönem çarpanı: <span class="math inline">\(\theta_{0} = \delta_{0} + \delta_{1} + \delta_{2}\)</span></li>
+<li>Uzun dönem çarpanı: <span class="math inline">\(\hat{\theta}_{0} = \hat{\delta}_{0} + \hat{\delta}_{1} + \hat{\delta}_{2}\)</span></li>
 </ul></li>
 <li>Daha sonra uzun dönem çarpanının istatistiki anlamlılığını test etmek için Model 1’i dönüştürüp Model 2’yi oluşturalım.
 <ul>
